# basert-mag

./: README.md  pyproject.toml
basert_agent/: __init__.py  attestation.py  cli.py  copilot_engine.py  runner.py
basert_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_basert.py
