[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "basert-agent"
version = "1.0.0"
description = "Local Apple Silicon LLM Coding Agent Runtime & BaseRT Task Orchestrator with HDAR Receipts"
readme = "README.md"
authors = [{ name = "Joseph Skrobynets", email = "j.skrobynets@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "pydantic>=2.0.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1"
]

[project.urls]
Homepage = "https://github.com/overandor/basert-agent"
Repository = "https://github.com/overandor/basert-agent"

[project.scripts]
basert-agent = "basert_agent.cli:main"
pi-basert = "basert_agent.cli:pi_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["basert_agent*"]
